# swagterm

./: .gitignore  Cargo.toml  PLAN.md  README.md
src/: app.rs  main.rs  swagger.rs  ui.rs  validate.rs
