[package]
name = "swagterm"
version = "0.1.0"
edition = "2021"
description = "Terminal Swagger/OpenAPI viewer"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
ureq = "2"
arboard = "3"
